Fix footer logo stretching with align-self: flex-start

--- a/css/style.css
+++ b/css/style.css
@@ -1149,6 +1149,7 @@ ul {
 .footer-logo {
   height: 80px;
   width: auto;
+  align-self: flex-start;
   margin-bottom: 16px;
 }
 .footer-col {
